--- a/photo/Base.lproj/Main.storyboard
+++ b/photo/Base.lproj/Main.storyboard
@@ -18,21 +18,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgE-7H-oaF">
-                                <rect key="frame" x="149" y="97" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tWL-qg-LZt"/>
-                                </connections>
-                            </button>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nsE-ik-kb5">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="8ql-Bj-9lo">
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="6FY-Pi-e7E">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="NgE-7H-oaF">
+                                                <rect key="frame" x="348" y="7" width="46" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="写真"/>
+                                                <connections>
+                                                    <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tWL-qg-LZt"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nbe-5E-8MY">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nsE-ik-kb5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MPq-CY-jlT"/>
+                            <constraint firstItem="nbe-5E-8MY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WkN-vs-6ym"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nbe-5E-8MY" secondAttribute="trailing" id="fCV-7o-ska"/>
+                            <constraint firstItem="nsE-ik-kb5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="h1p-tN-T7v"/>
+                            <constraint firstItem="nsE-ik-kb5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="lFY-4V-IrF"/>
+                            <constraint firstItem="nbe-5E-8MY" firstAttribute="top" secondItem="nsE-ik-kb5" secondAttribute="bottom" id="x5t-3t-ye3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nbe-5E-8MY" secondAttribute="bottom" id="xPA-tw-RpM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="memoLabel" destination="nbe-5E-8MY" id="jLQ-VL-415"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
         </scene>
     </scenes>
 </document>
